# brsr

./: .gitignore  CLAUDE.md  DEV_LOG.md  DEV_NOTES.md  README.md  biome.jsonc  index.html  package.json  tsconfig.app.json
.cargo/: config.toml
.github/workflows/: release.yml
scripts/: bump-version.js
src/: app.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: child-webviews.json  main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: app-sidebar.tsx  assistant-panel.tsx  settings-dialog.tsx  tab-strip.tsx  top-bar.tsx  update-banner.tsx  webview-container.tsx  webview-slot.tsx
src/components/ui/: calendar.tsx  carousel.tsx  chart.tsx  form.tsx  input-otp.tsx  resizable.tsx  sidebar.tsx  slider.tsx  toggle-group.tsx
src/hooks/: use-is-default-browser.ts  use-is-mac.ts  use-webview.ts
src/lib/: theme.ts
