[package]
name = "brsr"
version = "0.0.2"
description = "A Generative Browser"
authors = ["cam"]
edition = "2021"

[lib]
name = "brsr_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "unstable"] }
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
window-vibrancy = "0.6"
tauri-plugin-decorum = "1"
tauri-plugin-deep-link = "2.0"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-shell = "2"

[target."cfg(target_os = \"macos\")".dependencies]
core-foundation = "0.9.4"
core-foundation-sys = "0.8.6"
objc = "0.2"
objc-foundation = "0.1"
objc_id = "0.1"
